tests/compile_fail/unwind.stderr
error[E0277]: the type `&mut CtxMap<main::Schema>` may not be safely transferred across an unwind boundary
  --> tests/compile_fail/unwind.rs:8:26
   |
8  |       let _ = catch_unwind(|| {
   |               ------------ ^-
   |               |            |
   |  _____________|____________within this `{closure@$DIR/tests/compile_fail/unwind.rs:8:26: 8:28}`
   | |             |
   | |             required by a bound introduced by this call
9  | |         m.with(&KEY_A, &2, |m| {
10 | |             panic!("");
11 | |         });
12 | |     });
   | |_____^ `&mut CtxMap<main::Schema>` may not be safely transferred across an unwind boundary
   |
   = help: within `{closure@$DIR/tests/compile_fail/unwind.rs:8:26: 8:28}`, the trait `UnwindSafe` is not implemented for `&mut CtxMap<main::Schema>`
note: required because it's used within this closure
  --> tests/compile_fail/unwind.rs:8:26
   |
8  |     let _ = catch_unwind(|| {
   |                          ^^
note: required by a bound in `std::panic::catch_unwind`
  --> $RUST/std/src/panic.rs
   |
   | pub fn catch_unwind<F: FnOnce() -> R + UnwindSafe, R>(f: F) -> Result<R> {
   |                                        ^^^^^^^^^^ required by this bound in `catch_unwind`
